[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.17"
anyhow = "1.0"
log = "0.4"
core_loader = { path = "../core-loader" }
pico-args = "0.5"
cfixed-string = "1.0"
